# Statistics-Epilepsy-Book

./: README.md
Author-Instructions/: Overall
Chapter 01/: Ch1_code_R.R
Chapter 02/: butterworthBPFilter.m  butterworthNotchFilter.m  changeFs.m  iEEG_Preprocessing_ExamplePipeline.m  manuallyRejectTimeSegments.m
Chapter 03/: Bandpass_extract_timeseries_2022.sh  Copy_dcm2niix_2022.sh  Melodic_ICA_reg_mcf_for_FIX_Template.fsf  Melodic_fnirt_FIX_2022.sh  Nifti2BIDS_MRIQC_2023.sh  Runlevel1_2022.sh  Runlevel2_2022.sh  Runlevel3_2022.sh  fsl600_design_RestingState_correlation_run_Template.fsf  fsl600_design_RestingState_nuisance_run_segcsfwm_eigen_motion_outliers_Template.fsf  fsl600_design_group_fixed_3Z_Template.fsf  norm_vec.R  pet2bids_appian.sh
Chapter 05/: Ch5_code.R  aggregate_selectivity.csv  chosen_neuron_data.csv  resp_time_data.csv
Chapter 06/: Ch6_code.R  Ch6_data.csv
Chapter 07/: Ch7_code.ipynb  graph_inference.py  graph_transform.py  requirements.txt
Chapter 08/: Example_Patient_5.RData  IEA_counts_Example1.RData  IEA_counts_Example2.RData  IEA_counts_Example3.RData  IEA_counts_Example4.RData  example_01_var.R  example_02_var_lag_order.R  (+9 more)
Chapter 13/: pyproject.toml  run_experiment.sh  train.py
Chapter 13/config/: config_financial_impact.json  config_financial_impact_small.json
Chapter 13/data/: cloud.py  financial_impact.py  sudep.py
Chapter 13/inference/: handler.py  server.py
Chapter 13/notebooks/: financial_impact.py
Chapter 13/scripts/: bert_tokenizer.py  finetune.py  spacy_embeddings.py  spacy_pii.py  spacy_tokenization.py
(+66 files in other folders)
